[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flask_api"
version = "0.1.0"
description = "A simple Flask API for managing employees"
authors = ["Thiwanka Jayasiri <thiwankajayasiri@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pydantic = "^1.8.2"
locust = "^1.4.3"
pytest  = "^7.2.0"
pytest-cov = "^2.12.1"
pdoc = "14.1.0"

# Optionally, you can add development dependencies as well
[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
bandit = "^1.7.4"
flake8-pyproject = "^1.2.2"
toml = "^0.10.2"